--- a/.classpath
+++ b/.classpath
@@ -13,12 +13,14 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -33,49 +35,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/poi-ooxml-3.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/cdi-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/commons-cli-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/commons-io-2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/commons-lang3-3.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/guava-20.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/guice-4.0-no_aop.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/jansi-1.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/jcl-over-slf4j-1.7.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/jsr250-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-artifact-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-builder-support-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-compat-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-core-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-embedder-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-model-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-model-builder-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-plugin-api-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-repository-metadata-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-api-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-connector-basic-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-impl-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-provider-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-spi-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-transport-wagon-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-resolver-util-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-settings-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-settings-builder-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-shared-utils-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/maven-slf4j-provider-3.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/org.eclipse.sisu.inject-0.3.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/org.eclipse.sisu.plexus-0.3.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/plexus-cipher-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/plexus-component-annotations-1.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/plexus-interpolation-1.24.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/plexus-sec-dispatcher-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/plexus-utils-3.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/wagon-file-3.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/wagon-http-3.0.0-shaded.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/lib/wagon-provider-api-3.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/new/Downloads/apache-maven-3.5.3/boot/plexus-classworlds-2.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/pavankumar/Desktop/pavan important data/downloads/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/pavankumar/Desktop/pavan important data/downloads/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/pavankumar/Desktop/pavan important data/downloads/selenium-server-standalone-2.40.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/pavankumar/Desktop/pavan important data/downloads/sikulixapi.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
